新增門市據點詳細資料
新增詳細資料頁、進行自動化部署

--- a/week4/pages/store.html
+++ b/week4/pages/store.html
@@ -35,7 +35,7 @@
                 <li><span class="material-symbols-outlined"> location_on </span><a href="#">地址：台北市中山區南京東路25巷2-1號</a></li>
               </ul>
             </div>
-            <a href="#" class="store-btn">詳細資料</a>
+            <a href="store_map.html" class="store-btn">詳細資料</a>
           </div>
         </li>
         <li class="card">
@@ -51,7 +51,7 @@
                 <li><span class="material-symbols-outlined"> location_on </span><a href="#">地址：台北市中山區南京東路25巷2-1號</a></li>
               </ul>
             </div>
-            <a href="#" class="store-btn">詳細資料</a>
+            <a href="store_map.html" class="store-btn">詳細資料</a>
           </div>
         </li>
         <li class="card">
@@ -67,7 +67,7 @@
                 <li><span class="material-symbols-outlined"> location_on </span><a href="#">地址：台北市中山區南京東路25巷2-1號</a></li>
               </ul>
             </div>
-            <a href="#" class="store-btn">詳細資料</a>
+            <a href="store_map.html" class="store-btn">詳細資料</a>
           </div>
         </li>
         <li class="card">
@@ -83,7 +83,7 @@
                 <li><span class="material-symbols-outlined"> location_on </span><a href="#">地址：台北市中山區南京東路25巷2-1號</a></li>
               </ul>
             </div>
-            <a href="#" class="store-btn">詳細資料</a>
+            <a href="store_map.html" class="store-btn">詳細資料</a>
           </div>
         </li>
         <li class="card">
@@ -99,7 +99,7 @@
                 <li><span class="material-symbols-outlined"> location_on </span><a href="#">地址：台北市中山區南京東路25巷2-1號</a></li>
               </ul>
             </div>
-            <a href="#" class="store-btn">詳細資料</a>
+            <a href="store_map.html" class="store-btn">詳細資料</a>
           </div>
         </li>
       </ul>
